# Projet3

./: .gitignore  README.md
notes/: COMMANDES_UTILES.md  ETAPES_PROJET3.md  GUIDE_DEBUTANT.md  JOURNAL_AVANCEMENT.md
src/hexapode/: package.xml  setup.cfg  setup.py
src/hexapode/hexapode/: hexapode_node.py  ik_patte.py
src/hexapode/rviz/: hexapode.rviz
src/hexapode/urdf/: hexapode.urdf
