<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapode</name>
  <version>0.0.0</version>
  <description>Commande de deplacement d'un hexapode via geometry_msgs/TwistStamped (marche tripode + IK).</description>
  <maintainer email="lucas.taraire@ynov.com">Vyn3</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
